# tensile

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: enumerate.h  index_parser.h  logger.h  tensor.h  unimpl.h
include/tensile/: index_parser.h  logger.h  tensor.h  unimpl.h
src/: index_parser.cpp  logger.cpp  main.cpp  unimpl.cpp
test/: CMakeLists.txt  add_tests.cpp  expand_tests.cpp  index_parser_tests.cpp  index_tests.cpp  init_tests.cpp  matmul2d_tests.cpp  matmul3d_tests.cpp  shape_tests.cpp  slicing_tests.cpp  test_utils.cpp  test_utils.h  unary_ops_tests.cpp
